	PR middle-end/21781 	* real.c (real_from_string): If the mantissa is zero, don't bother 	parsing the exponent as the result should always be zero.

* gcc.dg/real-const-1.c: New test case.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@112136 138bc75d-0d04-0410-961f-82ee72b054a4